<resources>
    <string name="app_name">C BEER</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="logoName">C BEER</string>
    <string name="slogan" formatted="false">"Nous avons tous besoin d'une bière"</string>
    <string name="start">Démarrer</string>
    <string name="next">Suivant</string>
    <string name="count" formatted="false">"Le joueur n'a pas deviné"</string>
    <string name="reset" formatted="false">"Le joueur a deviné"</string>
    <string name="next2" formatted="false">"Suivant</string>
    <string name="player1">Joueur 1</string>
    <string name="player2">Joueur 2</string>
    <string name="player3">Joueur 3</string>
    <string name="player4">Joueur 4</string>
    <string name="player5">Joueur 5</string>
    <string name="player6">Joueur 6</string>
    <string name="player7">Joueur 7</string>
    <string name="player8">Joueur 8</string>
    <string name="player9">Joueur 9</string>
    <string name="player10">Joueur 10</string>
    <string name="player11">Joueur 11</string>
    <string name="player12">Joueur 12</string>
    <string name="help">Aide</string>
    <string name="help_gameOne" formatted="false">"Comme dirais le philosophe : Baisse ta culotte, c'est moi qui pilote! Ou presque..."</string>
    <string name="help_gameTwo" formatted="false">"Le Dealer répond au joueur (2 essais) qui essaye de deviner la carte (les chiffres/figures uniquement). Trois joueurs qui ne devinnent pas et le Dealer change! Les joueurs ne devinant pas boivent la différence entre les deux cartes, et inversement pour le dealer (vis-à-vis de la première carte citée)."</string>
    <string name="help_gameThree" formatted="false">"Les joueurs s'affrontent sur un jeu d'adresse. Le joueur qui fait le plus petit score aura un défi (que les autres joueurs choisiront) à réaliser! Soyez créatif!"</string>
    <string name="choose_game">Choix du jeu</string>
    <string name="action_settings">Settings</string>
    <string name="buttonAdd">+</string>
    <string name="buttonRemove">-</string>
    <string name="title_activity_gameone">title_activity_gameone</string>
    <string name="title_activity_gametwo">title_activity_gametwo</string>
    <string name="endPhrase" formatted="false">"Jeu fini! Appuyez sur suivant pour retourner à l'écran d'accueil"</string>
    <string name="noPlayer1" formatted="false">"Celles et ceux qui ont déjà attaqué l’apéro avant 10h du matin boivent 2 gorgées!"</string>
    <string name="noPlayer2" formatted="false">"Ceux/celles ayant un produit samsung boivent 2 gorgées."</string>
    <string name="noPlayer3" formatted="false">"Ceux/celles qui se sont déjà masturbé(e)s devant un clip de musique boivent 3 gorgées."</string>
    <string name="noPlayer4" formatted="false">"Ceux/celles ayant un produit Apple boivent 2 gorgées."</string>
    <string name="noPlayer5" formatted="false">"Cul sec pour les chauves et les roux."</string>
    <string name="noPlayer6" formatted="false">"Cul sec pour les chinois."</string>
    <string name="noPlayer7" formatted="false">"Vous êtes tous des grosses C, CUL SEC POUR TOUT LE MONDE!"</string>
    <string name="noPlayer8" formatted="false">"2 gorgées pour tout le monde."</string>
    <string name="noPlayer9" formatted="false">"3 gorgées pour tout le monde."</string>
    <string name="noPlayer10" formatted="false">"4 gorgées pour tout le monde."</string>
    <string name="noPlayer11" formatted="false">"Celui/celle qui enlève deux vêtements en premier distribue 2 gorgées."</string>
    <string name="noPlayer12" formatted="false">"Celles/ceux qui n’ont pas encore distribué de gorgées boivent 3 gorgées."</string>
    <string name="noPlayer13" formatted="false">"Celles et ceux qui travaillent/étudient dans l’ingénierie boivent 4 gorgées."</string>
    <string name="noPlayer14" formatted="false">"La personne avec le plus gros cul boit 4 gorgées."</string>
    <string name="noPlayer15" formatted="false">"Jusqu’à la fin du jeu, le premier joueur à dire “oui” prend un cul sec."</string>
    <string name="noPlayer16" formatted="false">"Les personnes tatouées ou ayant un piercing boivent 3 gorgées."</string>
    <string name="noPlayer17" formatted="false">"La première personne qui trouve le joueur le plus jeune distribue 3 gorgées."</string>
    <string name="noPlayer18" formatted="false">"Tous les blonds/blondes boivent 2 gorgées."</string>
    <string name="noPlayer19" formatted="false">"Le premier à envoyer un texto à un membre de sa famille distribue 2 gorgées."</string>
    <string name="noPlayer20" formatted="false">"Celles et ceux qui ont déjà triché pendant un examen boivent 4 gorgées."</string>
    <string name="noPlayer21" formatted="false">"Plus de téléphone ! La première personne à consulter son smartphone boit 5 gorgées."</string>
    <string name="noPlayer22" formatted="false">"Ceux/celles qui arrivent à toucher leur nez avec leur langue distribuent 3 gorgées."</string>
    <string name="noPlayer23" formatted="false">"Celles et ceux qui ont très mal fini à leur dernière soirée boivent 3 gorgées."</string>
    <string name="noPlayer24" formatted="false">"Celles et ceux qui entendent cette phrase boivent 4 gorgées."</string>
    <string name="noPlayer25" formatted="false">"Celles et ceux qui étaient saoules hier boivent 2 gorgées."</string>
    <string name="noPlayer26" formatted="false">"Celui/celle avec le verre le plus rempli boit 4 gorgées."</string>
    <string name="noPlayer27" formatted="false">"La dernière personne à être allée aux toilettes boit 2 gorgées."</string>
    <string name="noPlayer28" formatted="false">"Ceux/celles qui n’ont pas pris de douche aujourd’hui boivent 4 gorgées."</string>
    <string name="noPlayer29" formatted="false">"Citez tour à tour une race de chien, le premier qui n'en cite pas boit 4 gorgées."</string>
    <string name="noPlayer30" formatted="false">"Plutôt avoir une aventure avec Michel Drucker ou avec Jean-Pierre Koff? La minorité boit 5 gorgées."</string>
    <string name="noPlayer31" formatted="false">"Désignez tous ensemble le/la plus débile qui devra boire 4 gorgées. Le débile désigné donne 1 cul sec à un joueur de son choix."</string>
    <string name="noPlayer32" formatted="false">"Plutôt avoir une aventure avec Mireille Mathieu ou avec Mimie Mathy? La minorité boit 1 gorgée."</string>
    <string name="noPlayer33" formatted="false">"Plutôt avoir une aventure avec Xi Jinping ou Kim Jong-Un? La minorité boit 2 gorgées."</string>
    <string name="noPlayer34" formatted="false">"Les joueurs dont le nom de famille commence par "B" prennent un CUL SEC!"</string>
    <string name="noPlayer35" formatted="false">Si ton jour d’anniversaire est un nombre impair, bois 3 gorgées"</string>
    <string name="noPlayer36" formatted="false">"Si ton jour d’anniversaire est un nombre pair, bois 3 gorgées"</string>
    <string name="noPlayer37" formatted="false">"2 gorgées pour les fumeurs/fumeuses"</string>
    <string name="noPlayer38" formatted="false">"Le prochain joueur à devoir boire doublera son nombre de gorgées"</string>
    <string name="noPlayer39" formatted="false">"Les gauchers/gauchères boivent 2 gorgées"</string>
    <string name="noPlayer40" formatted="false">"Le joueur le plus agé boit autant de gorgées qu'il veut, les autres joueurs en boivent le double."</string>
    <string name="noPlayer41" formatted="false">"Ceux/celles qui ont les chaussettes trouées boivent 3 gorgées"</string>
    <string name="noPlayer42" formatted="false">"Les personnes en couple font boire 3 gorgées à une seule personne"</string>
    <string name="noPlayer43" formatted="false">"Ceux/celles qui possèdent un paquet de clopes boivent leur nombre de cigarettes restantes en gorgées (8 maximum)"</string>
    <string name="noPlayer44" formatted="false">"Les joueurs incapable de toucher le sol ­ debout,jambes tendus ­ boivent 3 gorgées"</string>
    <string name="noPlayer45" formatted="false">"On doit maintenant agripper son/sa voisine de droite lorsqu’on boit"</string>
    <string name="noPlayer46" formatted="false">"Le joueur le plus grand distribue 4 gorgées"</string>
    <string name="noPlayer47" formatted="false">"Remplacez les mots commençant par "P" par phacochère dans toutes vos phrases. Vous arrêtez à l'unanimité seulement"</string>
    <string name="noPlayer48" formatted="false">"Remplacez le son “a” par le son “i” (ex : “j’aime mon papa” devient “ j’aime mon pipi”). Le joueur le plus jeune décide quand ce jeu s'arrête."</string>
    <string name="noPlayer49" formatted="false">"Chaque mot commençant par C doit être dit "C" (ex : “C’est trop cool” devient “C trop C”)"</string>
    <string name="noPlayer50" formatted="false">"Les mains en l’air ! La dernière personne boit 4 gorgées"</string>
    <string-array name="noPlayerArray">
        <item>@string/noPlayer1</item>
        <item>@string/noPlayer2</item>
        <item>@string/noPlayer3</item>
        <item>@string/noPlayer4</item>
        <item>@string/noPlayer5</item>
        <item>@string/noPlayer6</item>
        <item>@string/noPlayer7</item>
        <item>@string/noPlayer8</item>
        <item>@string/noPlayer9</item>
        <item>@string/noPlayer10</item>
        <item>@string/noPlayer11</item>
        <item>@string/noPlayer12</item>
        <item>@string/noPlayer13</item>
        <item>@string/noPlayer14</item>
        <item>@string/noPlayer15</item>
        <item>@string/noPlayer16</item>
        <item>@string/noPlayer17</item>
        <item>@string/noPlayer18</item>
        <item>@string/noPlayer19</item>
        <item>@string/noPlayer20</item>
        <item>@string/noPlayer21</item>
        <item>@string/noPlayer22</item>
        <item>@string/noPlayer23</item>
        <item>@string/noPlayer24</item>
        <item>@string/noPlayer25</item>
        <item>@string/noPlayer26</item>
        <item>@string/noPlayer27</item>
        <item>@string/noPlayer28</item>
        <item>@string/noPlayer29</item>
        <item>@string/noPlayer30</item>
        <item>@string/noPlayer31</item>
        <item>@string/noPlayer32</item>
        <item>@string/noPlayer33</item>
        <item>@string/noPlayer34</item>
        <item>@string/noPlayer35</item>
        <item>@string/noPlayer36</item>
        <item>@string/noPlayer37</item>
        <item>@string/noPlayer38</item>
        <item>@string/noPlayer39</item>
        <item>@string/noPlayer40</item>
        <item>@string/noPlayer41</item>
        <item>@string/noPlayer42</item>
        <item>@string/noPlayer43</item>
        <item>@string/noPlayer44</item>
        <item>@string/noPlayer45</item>
        <item>@string/noPlayer46</item>
        <item>@string/noPlayer47</item>
        <item>@string/noPlayer48</item>
        <item>@string/noPlayer49</item>
        <item>@string/noPlayer50</item>
    </string-array>
    <string name="onePlayer1" formatted="false">"%s choisit un mot qu’il est maintenant interdit de prononcer [10 tours]. Il/elle compte aussi les tours, s'il/si elle oublie CUL SEC!"</string>
    <string name="onePlayer2" formatted="false">"%s défis qui tu veux à la bataille de pouce, le/la perdant(e) boit 4 gorgées"</string>
    <string name="onePlayer3" formatted="false">"%s fait le service [10 tours]. Il/elle compte aussi les tours, s'il/si elle oublie CUL SEC!"</string>
    <string name="onePlayer4" formatted="false">"%s boit autant de gorgées qu’il y a de joueurs"</string>
    <string name="gameThreeDifficulty"  formatted="false">"Choisissez la difficulté"</string>
    <string name="gameThreeRadioButtonEasy">Facile</string>
    <string name="gameThreeRadioButtonNormal">Moyen</string>
    <string name="gameThreeRadioButtonDifficult">Difficile</string>
    <string name="gameThreeValidDifficulty">Valider</string>
</resources>