<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.administrator.demo1.WelcomeActivity"
    android:background="#833534">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/logoName"
        android:id="@+id/textLogoName"
        android:textColor="#fdfdfe"
        android:textStyle="bold|italic"
        android:textSize="40sp"
        android:singleLine="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/slogan"
        android:id="@+id/textSlogan"
        android:layout_below="@+id/textLogoName"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:singleLine="true"
        android:textStyle="italic"
        android:textColor="#eeeeee"
        android:layout_marginBottom="15dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textSize="20sp"
        android:id="@+id/buttonStart"
        android:onClick="btStart"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="visible"
        android:width="130dp"
        android:height="50dp"/>

    <TextClock
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textClock"
        android:textSize="12sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/player1"
        android:ems="12"
        android:id="@+id/editPlayer1"
        android:layout_below="@+id/textSlogan"
        android:layout_centerHorizontal="true"
        android:textSize="14sp"
        android:singleLine="true"
        android:visibility="visible" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/player2"
        android:ems="12"
        android:id="@+id/editPlayer2"
        android:layout_below="@+id/editPlayer1"
        android:layout_centerHorizontal="true"
        android:textSize="14sp"
        android:singleLine="true"
        android:visibility="visible" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/player3"
        android:ems="12"
        android:id="@+id/editPlayer3"
        android:layout_below="@+id/editPlayer2"
        android:layout_centerHorizontal="true"
        android:textSize="14sp"
        android:singleLine="true"
        android:visibility="visible" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/player4"
        android:ems="12"
        android:id="@+id/editPlayer4"
        android:layout_below="@+id/editPlayer3"
        android:layout_centerHorizontal="true"
        android:textSize="14sp"
        android:singleLine="true"
        android:visibility="gone" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/player5"
        android:ems="12"
        android:id="@+id/editPlayer5"
        android:layout_below="@+id/editPlayer4"
        android:layout_centerHorizontal="true"
        android:textSize="14sp"
        android:singleLine="true"
        android:visibility="gone" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/player6"
        android:ems="12"
        android:id="@+id/editPlayer6"
        android:layout_below="@+id/editPlayer5"
        android:layout_centerHorizontal="true"
        android:textSize="14sp"
        android:singleLine="true"
        android:visibility="gone" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/player7"
        android:ems="12"
        android:id="@+id/editPlayer7"
        android:layout_below="@+id/editPlayer6"
        android:layout_centerHorizontal="true"
        android:textSize="14sp"
        android:singleLine="true"
        android:visibility="gone" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/player8"
        android:ems="12"
        android:id="@+id/editPlayer8"
        android:layout_below="@+id/editPlayer7"
        android:layout_centerHorizontal="true"
        android:textSize="14sp"
        android:singleLine="true"
        android:visibility="gone" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonAdd"
        android:id="@+id/buttonAdd4"
        android:width="20pt"
        android:height="20pt"
        android:visibility="visible"
        android:onClick="btAdd4"
        android:layout_alignBottom="@+id/editPlayer3"
        android:layout_toStartOf="@+id/editPlayer1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonAdd"
        android:id="@+id/buttonAdd5"
        android:width="20pt"
        android:height="20pt"
        android:visibility="gone"
        android:onClick="btAdd5"
        android:layout_alignBottom="@+id/editPlayer4"
        android:layout_toStartOf="@+id/editPlayer1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonAdd"
        android:id="@+id/buttonAdd6"
        android:width="20pt"
        android:height="20pt"
        android:visibility="gone"
        android:onClick="btAdd6"
        android:layout_alignBottom="@+id/editPlayer5"
        android:layout_toStartOf="@+id/editPlayer1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonAdd"
        android:id="@+id/buttonAdd7"
        android:width="20pt"
        android:height="20pt"
        android:visibility="gone"
        android:onClick="btAdd7"
        android:layout_alignBottom="@+id/editPlayer6"
        android:layout_toStartOf="@+id/editPlayer1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonAdd"
        android:id="@+id/buttonAdd8"
        android:width="20pt"
        android:height="20pt"
        android:visibility="gone"
        android:onClick="btAdd8"
        android:layout_alignBottom="@+id/editPlayer7"
        android:layout_toStartOf="@+id/editPlayer1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonRemove"
        android:id="@+id/buttonRemove4"
        android:width="20pt"
        android:height="20pt"
        android:layout_below="@+id/editPlayer3"
        android:layout_toEndOf="@+id/editPlayer1"
        android:visibility="gone"
        android:onClick="btRemove4"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonRemove"
        android:id="@+id/buttonRemove5"
        android:width="20pt"
        android:height="20pt"
        android:layout_below="@+id/editPlayer4"
        android:layout_toEndOf="@+id/editPlayer1"
        android:visibility="gone"
        android:onClick="btRemove5"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonRemove"
        android:id="@+id/buttonRemove6"
        android:width="20pt"
        android:height="20pt"
        android:layout_below="@+id/editPlayer5"
        android:layout_toEndOf="@+id/editPlayer1"
        android:visibility="gone"
        android:onClick="btRemove6"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonRemove"
        android:id="@+id/buttonRemove7"
        android:width="20pt"
        android:height="20pt"
        android:layout_below="@+id/editPlayer6"
        android:layout_toEndOf="@+id/editPlayer1"
        android:visibility="gone"
        android:onClick="btRemove7"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonRemove"
        android:id="@+id/buttonRemove8"
        android:width="20pt"
        android:height="20pt"
        android:layout_below="@+id/editPlayer7"
        android:layout_toEndOf="@+id/editPlayer1"
        android:visibility="gone"
        android:onClick="btRemove8"/>
</RelativeLayout>
