<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.administrator.demo1.GameOneActivity"
    android:background="#833534"
    android:onClick="layoutGameTwo">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageCards"
        android:layout_alignParentStart="true"
        android:src="@drawable/four_of_clubs_w960"
        android:visibility="gone"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="80dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Appuyer sur suivant pour tirer le nouveau maitre du jeu"
        android:gravity="center"
        android:id="@+id/textGameTwo"
        android:textSize="30sp"
        android:singleLine="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="180dp"
        android:layout_centerHorizontal="true"
        android:inputType="textMultiLine"
        android:maxLines="4"
        android:minLines="1"
        android:autoText="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/count"
        android:textSize="18sp"
        android:id="@+id/buttonCount"
        android:onClick="btCount"
        android:visibility="visible"
        android:width="100dp"
        android:height="70dp"
        android:layout_alignLeft="@id/imageCards"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/reset"
        android:textSize="18sp"
        android:id="@+id/buttonReset"
        android:onClick="btReset"
        android:visibility="visible"
        android:width="100dp"
        android:height="70dp"
        android:layout_alignTop="@+id/buttonCount"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/next2"
        android:textSize="18sp"
        android:id="@+id/buttonNext2"
        android:onClick="btNext2"
        android:visibility="visible"
        android:width="100dp"
        android:height="70dp"
        android:layout_marginLeft="110dp"
        android:layout_alignTop="@+id/buttonReset"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
